Moved package com.dropchop.recyclone.model.dto => com.dropchop.recyclone.base.dto.model Cleaned-up 200+ warnings. https://github.com/dropchop-com/recyclone/issues/22